# Lesson_11

./: .gitignore
Task_01/: Task_01.sln
Task_01/Lib/Greater/: Greater.cpp  Greater.h  Greater.vcxproj  Greater.vcxproj.filters
Task_01/Task_01/: Task_01.cpp  Task_01.vcxproj
Task_02/: Task_02.sln
Task_02/Lib/Leaver/: Leaver.cpp  Leaver.h  Leaver.vcxproj  Leaver.vcxproj.filters
Task_02/Task_02/: Task_02.vcxproj  main.cpp
Task_03/: CMakeLists.txt  main.cpp
Task_03/Lib/: CMakeLists.txt  Leaver.cpp  Leaver.h
Task_04/: Task_04.sln
Task_04/ShapeDynamicLib/: ShapeDynamicLib.vcxproj  ShapeDynamicLib.vcxproj.filters  equilateral.cpp  equilateral.h  isosceles.cpp  isosceles.h  parallelogram.h  print.h  rectangle.cpp  rectangle.h  rhombus.h  right_tr.h  shape.h  square.cpp  square.h  tetragon.cpp  tetragon.h  triangle.cpp  triangle.h
Task_04/Task_04/: Task_04.vcxproj
Task_05/: CMakeLists.txt  main.cpp
Task_05/Lib/: CMakeLists.txt  equilateral.h  isosceles.h  parallelogram.cpp  parallelogram.h  print.cpp  print.h  rectangle.h  rhombus.cpp  rhombus.h  right_tr.cpp  right_tr.h  shape.cpp  shape.h  square.h  tetragon.h  triangle.h
